--- a/assignment/index.html
+++ b/assignment/index.html
@@ -13,9 +13,8 @@
     </header>
     <!-- create an ordered list with any questions you have on this week's material -->
     <ul>
-      <li>1 - </li>
-      <li>2 - </li>
-      <li>3 - </li>
+      <li>1 - Question 7: In for/in and for/of loops do I have to write for(let x in/of y) or can I do for(x in/of y)?</li>
+      <li>2 - Is there an easier way to code question 6? </li>
     </ul>
   </body>
 </html>
